--- a/package.json
+++ b/package.json
@@ -4,12 +4,21 @@
   "description": "Wine Search Application",
   "main": "index.js",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "ejs": "^2.5.8",
-    "mysql": "^2.15.0"
+    "express": "^4.16.3",
+    "jquery": "^3.3.1",
+    "material-design-lite": "^1.3.0",
+    "mysql": "^2.15.0",
+    "nodemon": "^1.17.3",
+    "npm": "^5.8.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.17.2"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "author": "Team Awesome V2",
   "license": "ISC"
