--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
     "mysql": "^2.15.0",
+    "nock": "^9.2.5",
     "nodemon": "^1.17.3",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "simple-mock": "^0.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.17.2"
