--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.3",
     "jquery": "^3.3.1",
     "material-design-lite": "^1.3.0",
+    "mocha": "^5.1.1",
     "mysql": "^2.15.0",
     "nock": "^9.2.5",
     "nodemon": "^1.17.3",
