--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "chai-http": "^4.0.0",
+    "chai-like": "^1.1.1",
+    "chai-things": "^0.2.0",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
@@ -21,7 +24,7 @@
     "nodemon": "^1.17.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "dev": "nodemon server.js"
   },
   "author": "Team Awesome V2",
